--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
 																					<ul class="footer-list">
 											
 												  																									<li><a href="Privacy-Policy.html">Privacy Policy</a></li>
+																																					<li><a href="contact-us.html">Contact Us</a></li>
 												  											</ul>
 																			</div>
 								</div>
